--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 "https://fonts.googleapis.com/css2?family=Amiri&family=Lobster&family=Pacifico&display=swap" 
           rel="stylesheet">
     <!-- linking style.css file-->
-    <link rel="stylesheet" href="curr.css">
+    <link rel="stylesheet" href="index.css">
 </head>
   
 <body>
@@ -107,7 +107,7 @@
             </h2>
         </div>
     </div>
-    <script src="curr.js"></script>
+    <script src="index.js"></script>
     </div>
 </body>
 </html>
